# Cpp-knowladgeBase

./: .gitignore  CMakeLists.txt  README.md
Docs/: Loops.md  Operators & Expressions.md  Variable Types & Memory.md
Projects/: Console Music Library Manager.cpp
Projects/Character Manager/: character.h  main.cpp
Projects/DeviceList/: CMakeLists.txt  main.cpp
Projects/ElevenLabs - First mp3/: CMakeLists.txt  README.md  config.h  main.ccp
Projects/ElevenLabsVoiceList/: CMakeLists.txt  config.h  main.cpp
Projects/Gemini-First-message/: CMakeLists.txt  README.md  config.h  main.cpp
Projects/Inventory System/: Inventory.h  Item.h  main.cpp
Projects/Jarvis-Final-Project/: CMakeLists.txt  README.md
Projects/Jarvis-Final-Project/include/: Brain.h  Config.h  Recorder.h  Transcriber.h  VoiceOutput.h
Projects/Jarvis-Final-Project/src/: main.cpp
Projects/MusicManager/: main.cpp
Projects/Simple Weather Checker/: CMakeLists.txt  main.cpp
Projects/сurl/: CMakeLists.txt  main.cpp
